--- a/01-getting-started/src/index.css
+++ b/01-getting-started/src/index.css
@@ -1,25 +1,24 @@
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+@font-face {
+    font-family: DS-Digital;
+    src: url('./fonts/DS-Digital.ttf.eot');
+    src: url('./fonts/DS-Digital.ttf.eot#iefix'), url('./fonts/DS-Digital.ttf.woff') format('woff'), url('./fonts/DS-DIGI.TTF') format('truetype'), url('./fonts/DS-Digital.ttf.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif;
 }
 
-body,
-html {
+body, html {
     height: 100%;
     color: #777;
     line-height: 1.8;
 }
 
-
 /* Create a Parallax Effect */
 
-.bgimg-1,
-.bgimg-2 {
+.bgimg-1, .bgimg-2 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -29,7 +28,6 @@ html {
 .info-box {
     width: 80%
 }
-
 
 /* First image (Logo. Full height) */
 
@@ -41,7 +39,6 @@ html {
     border-radius: 50%;
     opacity: 0.3;
 }
-
 
 /* Second image (Size) */
 
@@ -65,14 +62,68 @@ html {
     width: 50px;
 }
 
-
 /* Turn off parallax scrolling for tablets and phones */
 
 @media only screen and (min-device-width: 1600px) {
-    .bgimg-1,
-    .bgimg-2,
-    .bgimg-3 {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
         background-attachment: scroll;
         min-height: 400px;
     }
+}
+
+#mycalculator {
+    width: 500px;
+    height: 700px;
+    margin: 0 auto;
+    padding: 10px;
+    border: solid 2px black;
+}
+
+#mycalculator::after {
+    content: "";
+    clear: both;
+    display: inline-block;
+}
+
+#mycalculator h3 {
+    text-align: center;
+}
+
+#input-display {
+    font-family: 'DS-Digital';
+    width: 100%;
+    height: 2em;
+    border: solid 2px black;
+    margin: 5px auto;
+    line-height: 2em;
+    text-align: right;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 36px;
+}
+
+#keypad-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.btn {
+    width: 120px;
+    height: 100px;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.btn-equals {}
+
+.rounded {
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
 }
