--- a/01-getting-started/src/index.css
+++ b/01-getting-started/src/index.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: DS-Digital;
-    src: url('./fonts/DS-Digital.ttf.eot');
-    src: url('./fonts/DS-Digital.ttf.eot#iefix'), url('./fonts/DS-Digital.ttf.woff') format('woff'), url('./fonts/DS-DIGI.TTF') format('truetype'), url('./fonts/DS-Digital.ttf.svg') format('svg');
+    src: url('./fonts/DS-Digital.ttf.eot'), url('./fonts/DS-Digital.ttf.woff') format('woff'), url('./fonts/DS-DIGI.TTF') format('truetype'), url('./fonts/DS-Digital.ttf.svg') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -71,7 +70,7 @@ body, html {
     }
 }
 
-#mycalculator {
+#calculator1 {
     width: 500px;
     height: 700px;
     margin: 0 auto;
@@ -79,13 +78,19 @@ body, html {
     border: solid 2px black;
 }
 
-#mycalculator::after {
-    content: "";
-    clear: both;
-    display: inline-block;
+.full-width {
+    width: 100%;
 }
 
-#mycalculator h3 {
+.rounded {
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+
+#calculator1 h3 {
     text-align: center;
 }
 
@@ -103,27 +108,24 @@ body, html {
 }
 
 #keypad-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     width: 100%;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+    padding-bottom: 5px;
+    ;
 }
 
-.btn {
-    width: 120px;
+button.btn {
     height: 100px;
+    font-weight: bold;
+    background-color: #c4c0c0;
+    line-height: 2em;
+    font-size: 2em;
 }
 
-.full-width {
-    width: 100%;
-}
-
-.btn-equals {}
-
-.rounded {
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
+#btn-equals {
+    /* position: relative;
+    overflow: hidden; */
 }
