--- a/03-objects/src/index.css
+++ b/03-objects/src/index.css
@@ -9,7 +9,7 @@ html, body {
 
 section {
     margin: 0;
-    background-color: rgb(198, 242, 255);
+    background-color: #c6f2ff;
     height: 100vh;
     padding: 10px;
 }
@@ -50,6 +50,63 @@ h3 {
     margin-bottom: 20px;
 }
 
+#account-list-header {
+    display: inline-block;
+    width: 80%;
+}
+
+#sorting {
+    position: relative;
+    top: 20px;
+    justify-self: right;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: solid 4px #444;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    margin-right: 30px;
+}
+
+#sorting hr {
+    position: relative;
+    top: -13px;
+    border: solid 2px #444;
+    margin: 0;
+    padding: 0;
+}
+
+.fas {
+    font-size: 2.5em;
+}
+
+a#ascending, a#descending {
+    position: relative;
+    left: 12px;
+}
+
+a#ascending {
+    top: 0;
+}
+
+a#descending {
+    bottom: 0;
+    top: -30px;
+}
+
+.fa-sort-up, .fa-sort-down {
+    position: relative;
+    height: 16px;
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     padding: 20px;
 }
@@ -76,6 +133,20 @@ input[type="text"].control {
 
 .border-5 {
     border: 5px solid #444;
+}
+
+.border-bottom {
+    border: none;
+    border-bottom: solid 1px #444;
+}
+
+.account-name {
+    color: #444;
+    font-size: 2.3em;
+    width: 100%;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    background-color: #c6f2ff;
 }
 
 .rounded-10 {
@@ -202,7 +273,3 @@ input[type="text"].control {
     left: 90%;
     text-align: right;
 }
-
-/* .card div p span {
-    float: right;
-} */
