--- a/03-objects/src/index.css
+++ b/03-objects/src/index.css
@@ -52,7 +52,7 @@ h3 {
 
 #account-list-header {
     display: inline-block;
-    width: 80%;
+    width: 90%;
 }
 
 #sorting {
@@ -63,7 +63,7 @@ h3 {
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     display: inline-block;
-    width: 50px;
+    width: 20px;
     height: 50px;
     border: solid 4px #444;
     border-radius: 20px;
@@ -76,7 +76,7 @@ h3 {
 
 #sorting hr {
     position: relative;
-    top: -13px;
+    top: -15px;
     border: solid 2px #444;
     margin: 0;
     padding: 0;
@@ -86,16 +86,22 @@ h3 {
     font-size: 2.5em;
 }
 
-a#ascending, a#descending {
-    position: relative;
-    left: 12px;
+.btnClose {
+    position: absolute;
+    top: 2px;
+    right: 10px;
 }
 
-a#ascending {
+a#btnAscending, a#btnDescending {
+    position: relative;
+    left: -2px;
+}
+
+a#btnAscending {
     top: 0;
 }
 
-a#descending {
+a#btnDescending {
     bottom: 0;
     top: -30px;
 }
@@ -252,7 +258,6 @@ input[type="text"].control {
     border-radius: 10px;
     width: 90%;
     height: 130px;
-    margin: 20px;
     padding: 20px;
     border: 1px solid black;
     -webkit-border-radius: 10px;
