--- a/03-objects/src/index.css
+++ b/03-objects/src/index.css
@@ -88,8 +88,13 @@ h3 {
 
 .btnClose {
     position: absolute;
-    top: 2px;
-    right: 10px;
+    top: 5px;
+    right: 5px;
+    border: solid 2px #444;
+    font-weight: bold;
+    width: 15px;
+    text-align: center;
+    cursor: pointer;
 }
 
 a#btnAscending, a#btnDescending {
